--- a/config-dept-client.yml
+++ b/config-dept-client.yml
@@ -24,7 +24,7 @@ spring:
     name: config-dept-client  #应用名称
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/study
+    url: jdbc:mysql://localhost:3306/study3
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
